--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -23,6 +23,8 @@ jobs:
         pip install requests pyyaml
 
     - name: Run update script
+      env:
+        GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
       run: |
         python update_clash.py
 
@@ -32,4 +34,4 @@ jobs:
         git config --global user.email "actions@github.com"
         git add clash_config.yaml
         git commit -m "auto: update clash config" || echo "No changes to commit"
-        git push
+        git push https://x-access-token:${{ secrets.MY_GITHUB_TOKEN }}@github.com/sdfwch/clash-config.git main
