--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,8 +2,8 @@ name: Update Clash Config
 
 on:
   schedule:
-    - cron: '0 4 * * *'  # 每天凌晨 4 点运行（UTC 时间）
-  workflow_dispatch:      # 允许手动触发
+    - cron: '0 4 * * *'  # 每天凌晨 4 点（UTC）
+  workflow_dispatch:
 
 jobs:
   update-clash-config:
@@ -12,6 +12,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.MY_GITHUB_TOKEN }}  # ✅ 关键！必须加上
 
     - name: Set up Python
       uses: actions/setup-python@v5
@@ -23,8 +25,6 @@ jobs:
         pip install requests pyyaml
 
     - name: Run update script
-      env:
-        GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
       run: |
         python update_clash.py
 
@@ -34,4 +34,4 @@ jobs:
         git config --global user.email "actions@github.com"
         git add clash_config.yaml
         git commit -m "auto: update clash config" || echo "No changes to commit"
-        git push https://x-access-token:${{ secrets.MY_GITHUB_TOKEN }}@github.com/sdfwch/clash-config.git main
+        git push  # ✅ 不需要写完整 URL，checkout 已经带 token
